--- a/resources/template.yaml
+++ b/resources/template.yaml
@@ -23,7 +23,7 @@ Parameters:
     Default: ""
     Description: Type of resource being created
 
-  ArtifactBucket:
+  FilesUploadBucket:
     Type: String
     Default: ""
     Description: S3 bucket for storing deployment artifacts  
@@ -44,7 +44,7 @@ Resources:
     Type: AWS::S3::Bucket
     Condition: CreateArtifactBucket
     Properties:
-      BucketName: !Ref ArtifactBucket
+      BucketName: !Ref FilesUploadBucket
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
@@ -109,7 +109,7 @@ Resources:
       Role: !GetAtt LambdaExecutionRole.Arn
       Environment:
         Variables:
-          S3_BUCKET_NAME: !Ref ArtifactBucket
+          S3_BUCKET_NAME: !Ref FilesUploadBucket
           ENVIRONMENT: !Ref Environment
           REGION: !Ref Region
       Tags:
@@ -143,7 +143,7 @@ Resources:
 
 Outputs:
   S3BucketName:
-    Value: !Ref ArtifactBucket
+    Value: !Ref FilesUploadBucket
     Description: Name of the created S3 bucket
     Export:
       Name: !Sub "${AWS::StackName}-S3BucketName"
